fix(edge): change the edge menu to work in dark mode EE-2462 (#6488)

--- a/app/portainer/components/datatables/components/ActionsMenu.module.css
+++ b/app/portainer/components/datatables/components/ActionsMenu.module.css
@@ -9,6 +9,8 @@
 
 .table-actions-menu-list {
   padding: 0 10px 0 10px;
+  background: var(--bg-widget-color);
+  border: 1px solid var(--border-color);
 }
 
 .table-actions-menu-list [data-reach-menu-item] {
